--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 body {
   height: 100vh;
@@ -16,6 +16,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px;
 }
 
 input {
@@ -24,4 +25,43 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  font-weight: bolder;
+  color: #666;
+  margin: 6px;
+}
+
+body,
+.left-links,
+.right-links,
+.header,
+.content,
+.footer {
+  display: flex;
+}
+
+body {
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.header,
+.footer {
+  justify-content: space-between;
+}
+
+.content {
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer {
+  background-color: #eee;
 }
