--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,19 +1,29 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  align-items: center;
+  font-size: xx-large;
+  font-weight: bold;
+  display: flex;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar {
@@ -21,8 +31,34 @@ body {
   background: royalblue;
 }
 
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+}
 .card {
   border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
   border-radius: 4px;
+  margin: 30px;
+  padding: 15px;
+  width: 300px;
+}
+
+.content {
+  display: flex;
+  flex: 1;
+}
+
+ul {
+  list-style: none;
+  padding-left: 5px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+li {
+  padding: 5px;
 }
