--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -3,8 +3,17 @@
   padding: 0;
 }
 
+body {
+  height: 100vh;
+  /* overflow: hidden; */
+}
+
 .container {
   text-align: center;
+  display: grid;
+  gap: 4px;
+  grid-template-columns: 1fr 4fr;
+  /* grid-template-rows: 2fr 4fr 1fr; */
 }
 
 .container div {
@@ -17,15 +26,25 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1/3;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style-type: none;
+  display: inline;
+  padding: 30px;
 }
 
 .sidebar {
-  background-color: #FF7755;
+  background-color: #ff7755;
+  grid-column: 1/2;
+  grid-row: 2/4;
+  display: grid;
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -36,7 +55,6 @@
   border-radius: 10px;
 }
 
-
 .sidebar .side-content {
   background-color: white;
   color: black;
@@ -45,16 +63,27 @@
 }
 
 .nav {
-  background-color: #FF7755;
+  background-color: #ff7755;
+  grid-column: 2/3;
+  grid-row: 2/3;
+  width: 100%;
+  display: grid;
+  /* grid-template-columns: 1fr 1fr 1fr; */
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  display: inline-block;
 }
 
 .article {
   background-color: #bccbde;
+  grid-column: 2/3;
+  grid-row: 3/4;
+  display: grid;
+  gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 .article p {
@@ -65,9 +94,10 @@
 }
 
 .article .card {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -83,9 +113,11 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/3;
+  grid-row: 4/5;
 }
 
 .footer p {
   font-size: 13px;
-  font-weight: normal;  
+  font-weight: normal;
 }
